WIP -- PROJECT IS BROKEN
Began rewriting UPnP-IGD module.